--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.16.2",
     "i18n": "^0.8.3",
     "mongodb": "^3.0.3",
-    "package": "^1.0.1"
+    "package": "^1.0.1",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {},
   "scripts": {
